Добавил автообновление календарей

--- a/alembic.ini
+++ b/alembic.ini
@@ -36,6 +36,7 @@ script_location = app/alembic
 # output_encoding = utf-8
 
 sqlalchemy.url = mysql://root:password@localhost:3306/db
+;sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/tests
 
 
 [post_write_hooks]
