Обновляемый список преподавателей и групп

--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = app/alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://root:password@localhost:3306/db
+sqlalchemy.url = mysql+pymysql://root:password@localhost:3306/db
 ;sqlalchemy.url = postgresql://postgres:postgres@localhost:5432/tests
 
 
