--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-aiohttp
-aiomisc
-aiomisc_dependency
-aioredis
-configargparse
-icalendar
-marshmallow
-multidict
-pytz
-ujson
+aiohttp~=3.6.2
+aiomisc~=9.7.8
+aioredis~=1.3.1
+configargparse~=1.2.1
+icalendar~=4.0.5
+marshmallow~=3.5.1
+pytz~=2019.3
+ujson~=2.0.3
+pytest~=5.4.1
+yarl~=1.4.2
+setuptools~=46.1.3
+multidict~=4.7.5
