--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,21 +2,15 @@ version: '3.1'
 
 services:
   app:
-    build:
-      dockerfile: Dockerfile
-      context: .
-#    command: python3 /mnt/start.py
-    volumes:
-      - .:/mnt
-      - ./ics_folder:/mnt/ics_folder
-    working_dir: /mnt/
+    build: Dockerfile
     expose:
       - 4040
     ports:
       - "4040:4040"
     environment:
-      APP_API_URL: 0.0.0.0
+      APP_API_ADDRESS: 0.0.0.0
       APP_REDIS: redis://redis/0
+      APP_DEBUG: "true"
 
   redis:
     image: redis
