--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,9 @@ version: '3.1'
 
 services:
   app:
-    build: Dockerfile
+    build:
+      context: .
+      dockerfile: Dockerfile
     expose:
       - 4040
     ports:
